# NyayaSetu

./: .env.example  .gitignore  README.md  UI_REDESIGN.md  main.py  pyproject.toml  tech_stack_brainstorm.md
api/: __init__.py  main.py  routes.py  schemas.py
scripts/: ingest_legal_docs.py
src/: __init__.py  config.py
src/embeddings/: __init__.py  manager.py
src/generation/: __init__.py  llm_client.py  prompts.py
src/ingestion/: legal_parser.py  pdf_loader.py
src/processing/: __init__.py  chunker.py
src/retrieval/: __init__.py  retriever.py
src/vectorstore/: __init__.py  store.py
ui/: index.html
ui/static/css/: style.css
ui/static/js/: app.js
